[package]
name = "big_num_math_lite"
version = "0.1.0"
edition = "2021"
authors     = [ "software9119.technology" ]
license     = "MIT"
description = "No alloc simple math library torso. Useful as base for embeded-dev."
keywords    = [ "math", "large-numbers", "big-int" ]
categories  = [ "no-std", "mathematics", "no-alloc" ]
repository  = "https://github.com/deep-outcome/big_num_math_lite"
readme        = "README.md"
